# connect_X

./: .gitignore  main.py  pyproject.toml
Agent/: dqn_submission.py  v01000_simple_agent.py  v02000_ql_agent.py
Agents/: 01_tutorial_check_winning_move.py  v01000_simple_agent.py
cache/: _dq.pkl  dq.pkl
notebook/: GettingStarted.ipynb  Untitled.ipynb  check_rewards.ipynb  reinforcement_q_learning.ipynb  render_match.ipynb
notebook/Introduction/: 01_Tutorial.ipynb  README.md  connectx-with-q-learning.ipynb
submission/: v01000_baseline.py  v01001_checkThreeSpotPattern.py  v01001_checkVerticalThreeSpotPattern.py  v01002_checkHorizontalThreeSpotPattern.py  v01002_test.py  v01003_UseGPU.py
tutorials/: pytorch_DQN_CartPole.py  pytorch_DQN_lunar_lander.py  test.py  v01000_SimpleAgent.py  v02000_Q_Learning.py  v03000_DQN.py
v01000/: README.md  v01000_baseline.py  v01001_checkVerticalThreeSpotPattern.py  v01002_checkHorizontalThreeSpotPattern.py  v01003_UseGPU.py
v01000/cache/: v01000_dq_trainer.pkl  v01001_dq_trainer.pkl  v01002_dq_trainer.pkl
v01000/train_log/: v01002_train_log.csv
